[package]
name = "btc_mnemonics"
version = "0.1.0"
edition = "2024"

[dependencies]
fs4 = "0.13.1"
chrono = "0.4.41"
bitcoin = "0.32.6"
reqwest = "0.12.22"
serde_json = "1.0.141"
bitcoin-address-generator = "0.1.1"
tokio = { version = "1.46.1", features = ["full"] }

[[bin]]
name = "btc_mnemonics"
path = "src/main.rs"